--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -110,11 +110,18 @@
     <Compile Include="Actors\ActorInstance.cs" />
     <Compile Include="Actors\ActorFactory.cs" />
     <Compile Include="Actors\Actors\Registries\ActorRegistryHeaderChannel.cs" />
+    <Compile Include="Actors\ExtensionsForLinking.cs" />
+    <Compile Include="Actors\Internal\ActorOperationExecutor.cs" />
     <Compile Include="ActorUrn.cs" />
+    <Compile Include="Fibers\Internal\TryCatchOperationExecutor.cs" />
+    <Compile Include="Internal\FaultImpl.cs" />
+    <Compile Include="Internal\LinkImpl.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\AdvancedExtensionsForHeaders.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MatchHeader.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MatchHeaderChannel.cs" />
     <Compile Include="MessageHeaders\SetMessageHeader.cs" />
+    <Compile Include="Messages\Fault.cs" />
+    <Compile Include="Messages\Link.cs" />
     <Compile Include="Messages\Resume.cs" />
     <Compile Include="Messages\Start.cs" />
     <Compile Include="Messages\Stop.cs" />
