--- a/src/Stact.Specs/Stact.Specs.csproj
+++ b/src/Stact.Specs/Stact.Specs.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Actors\Auctions\Given_an_auction_actor_instance.cs" />
     <Compile Include="Actors\CleanUsing_Specs.cs" />
     <Compile Include="Actors\Fault_Specs.cs" />
+    <Compile Include="Actors\InterceptExit_Specs.cs" />
     <Compile Include="Actors\Linking_Specs.cs" />
     <Compile Include="Actors\OrderedReceive_Specs.cs" />
     <Compile Include="Actors\Repeat_Specs.cs" />
@@ -189,6 +190,8 @@
     <Compile Include="Routing\HeaderAdapterRouting_Specs.cs" />
     <Compile Include="Routing\Memory_Specs.cs" />
     <Compile Include="Routing\NewRouting_Specs.cs" />
+    <Compile Include="Routing\Redesign\Branch_Specs.cs" />
+    <Compile Include="Routing\Redesign\Inspection_Specs.cs" />
     <Compile Include="Routing\Routing_Specs.cs" />
     <Compile Include="Routing\Visualizer_Specs.cs" />
     <Compile Include="StateMachine\ChannelConfigurator_Specs.cs" />
