--- a/src/Stact.Specs/Stact.Specs.csproj
+++ b/src/Stact.Specs/Stact.Specs.csproj
@@ -85,6 +85,10 @@
     <Reference Include="Magnum.TestFramework" Condition="'$(TargetFrameworkVersion)' == 'v4.0'">
       <HintPath>..\..\lib\Magnum\net-4.0\TestFramework\Magnum.TestFramework.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.DebuggerVisualizers, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\Visual Studio 10\Microsoft.VisualStudio.DebuggerVisualizers.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.5.2.9222, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit\net-2.0\nunit.framework.dll</HintPath>
@@ -186,12 +190,13 @@
     <Compile Include="Registries\ActorRegistry_Specs.cs" />
     <Compile Include="Registries\LoopbackRegistry_Specs.cs" />
     <Compile Include="Registries\MessageBody_Specs.cs" />
+    <Compile Include="Routing\Behavior\TupleJoin_Specs.cs" />
     <Compile Include="Routing\Condition_Specs.cs" />
     <Compile Include="Routing\HeaderAdapterRouting_Specs.cs" />
     <Compile Include="Routing\Memory_Specs.cs" />
     <Compile Include="Routing\NewRouting_Specs.cs" />
-    <Compile Include="Routing\Redesign\Branch_Specs.cs" />
-    <Compile Include="Routing\Redesign\Inspection_Specs.cs" />
+    <Compile Include="Routing\Behavior\Branch_Specs.cs" />
+    <Compile Include="Routing\Behavior\Inspection_Specs.cs" />
     <Compile Include="Routing\Routing_Specs.cs" />
     <Compile Include="Routing\Visualizer_Specs.cs" />
     <Compile Include="StateMachine\ChannelConfigurator_Specs.cs" />
@@ -207,6 +212,10 @@
     <Compile Include="Workflow\WorkflowActor_Specs.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Stact.Visualizers\Stact.Visualizers.csproj">
+      <Project>{E3B85293-F10D-4782-ADCF-B67D7A58291C}</Project>
+      <Name>Stact.Visualizers</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Stact\Stact.csproj">
       <Project>{C3650C32-0850-48B4-BE71-ECE9FACBD356}</Project>
       <Name>Stact</Name>
