--- a/src/Stact.ForNHibernate/Stact.ForNHibernate.csproj
+++ b/src/Stact.ForNHibernate/Stact.ForNHibernate.csproj
@@ -101,10 +101,10 @@
       <HintPath>..\..\lib\Magnum\net-4.0\Magnum.dll</HintPath>
     </Reference>
    <Reference Include="Magnum.ForNHibernate" Condition="'$(TargetFrameworkVersion)' == 'v3.5'">
-      <HintPath>..\..\lib\Magnum\net-3.5\Magnum.ForNHibernate.dll</HintPath>
+      <HintPath>..\..\lib\Magnum\net-3.5\ForNHibernate\Magnum.ForNHibernate.dll</HintPath>
     </Reference>
 	<Reference Include="Magnum.ForNHibernate" Condition="'$(TargetFrameworkVersion)' == 'v4.0'">
-      <HintPath>..\..\lib\Magnum\net-4.0\Magnum.ForNHibernate.dll</HintPath>
+      <HintPath>..\..\lib\Magnum\net-4.0\ForNHibernate\Magnum.ForNHibernate.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate, Version=2.1.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -194,7 +194,7 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
