--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -249,13 +249,44 @@
     <Compile Include="Remote\Remote\SocketExtensions.cs" />
     <Compile Include="Remote\Remote\SocketWriter.cs" />
     <Compile Include="Remote\Remote\DelegateChunkWriter.cs" />
+    <Compile Include="Routing\Contexts\AbstractRoutingContext.cs" />
+    <Compile Include="Routing\Contexts\MessageRoutingContext.cs" />
+    <Compile Include="Routing\Contexts\MessageRoutingContextFactory.cs" />
+    <Compile Include="Routing\Contexts\MessageRoutingContextImpl.cs" />
+    <Compile Include="Routing\Contexts\MessageRoutingContextProxy.cs" />
+    <Compile Include="Routing\Contexts\MessageRoutingContextProxyFactory.cs" />
+    <Compile Include="Routing\Contexts\RequestRoutingContextProxyFactory.cs" />
+    <Compile Include="Routing\Contexts\ResponseRoutingContextProxyFactory.cs" />
+    <Compile Include="Routing\Contexts\RoutingContextProxyFactory.cs" />
+    <Compile Include="Routing\Contexts\ObjectRoutingContextFactory.cs" />
+    <Compile Include="Routing\Contexts\RequestRoutingContext.cs" />
+    <Compile Include="Routing\Contexts\RequestRoutingContextFactory.cs" />
+    <Compile Include="Routing\Contexts\RequestRoutingContextImpl.cs" />
+    <Compile Include="Routing\Contexts\RequestRoutingContextProxy.cs" />
+    <Compile Include="Routing\Contexts\ResponseRoutingContext.cs" />
+    <Compile Include="Routing\Contexts\ResponseRoutingContextFactory.cs" />
+    <Compile Include="Routing\Contexts\ResponseRoutingContextImpl.cs" />
+    <Compile Include="Routing\Contexts\ResponseRoutingContextProxy.cs" />
+    <Compile Include="Routing\Contexts\RoutingContext.cs" />
+    <Compile Include="Routing\Contexts\RoutingContextFactory.cs" />
+    <Compile Include="Routing\Internal\AlphaNodeInitializer.cs" />
+    <Compile Include="Routing\Internal\AlphaNodeInitializerImpl.cs" />
+    <Compile Include="Routing\Internal\ConvertNode.cs" />
     <Compile Include="Routing\Internal\BodyNode.cs" />
-    <Compile Include="Routing\Internal\ContextAdapter.cs" />
+    <Compile Include="Routing\Internal\ConsumerNodeFactory.cs" />
+    <Compile Include="Routing\Internal\DynamicConsumerNodeFactory.cs" />
+    <Compile Include="Routing\Internal\DynamicRoutingContextFactory.cs" />
     <Compile Include="Routing\Internal\MatchAlphaNode.cs" />
     <Compile Include="Routing\Internal\MatchJoinNode.cs" />
+    <Compile Include="Routing\Internal\MessageConsumerNodeFactory.cs" />
+    <Compile Include="Routing\Internal\ObjectConsumerNodeFactory.cs" />
     <Compile Include="Routing\Internal\ProductionNode.cs" />
+    <Compile Include="Routing\Internal\RequestConsumerNodeFactory.cs" />
+    <Compile Include="Routing\Internal\ResponseConsumerNodeFactory.cs" />
+    <Compile Include="Routing\MessageActivation.cs" />
     <Compile Include="Routing\RemoveActivation.cs" />
-    <Compile Include="Routing\RoutingContextProxy.cs" />
+    <Compile Include="Routing\RequestActivation.cs" />
+    <Compile Include="Routing\ResponseActivation.cs" />
     <Compile Include="Routing\Visualizers\ExtensionsForVisualizers.cs" />
     <Compile Include="Routing\Visualizers\GraphRoutingEngineVisitor.cs" />
     <Compile Include="Routing\Visualizers\RoutingEngineGraphData.cs" />
@@ -371,7 +402,6 @@
     <Compile Include="Routing\Configuration\WhenConfiguratorImpl.cs" />
     <Compile Include="Routing\Configuration\WhenExtensions.cs" />
     <Compile Include="Routing\Internal\ConsumerNode.cs" />
-    <Compile Include="Routing\DynamicRoutingContext.cs" />
     <Compile Include="Routing\Internal\AlphaMemory.cs" />
     <Compile Include="Routing\Internal\JoinNode.2.cs" />
     <Compile Include="Routing\Internal\RightActivation.cs" />
@@ -382,12 +412,10 @@
     <Compile Include="Routing\Internal\SuccessorList.cs" />
     <Compile Include="Routing\Internal\BetaMemory.cs" />
     <Compile Include="Routing\Internal\ConstantNode.cs" />
-    <Compile Include="Routing\Internal\ExtensionsToList.cs" />
     <Compile Include="Routing\Internal\JoinNode.cs" />
     <Compile Include="Routing\Internal\ActivatedMessageList.cs" />
     <Compile Include="Routing\Internal\AlphaNode.cs" />
     <Compile Include="Routing\Internal\ConditionNode.cs" />
-    <Compile Include="Routing\Internal\RoutingContext.cs" />
     <Compile Include="Routing\Internal\RootNode.cs" />
     <Compile Include="Routing\RoutingEngine.cs" />
     <Compile Include="Routing\Internal\SelectiveConsumerNode.cs" />
