--- a/src/Stact.Specs/Stact.Specs.csproj
+++ b/src/Stact.Specs/Stact.Specs.csproj
@@ -193,7 +193,9 @@
     <Compile Include="Routing\Behavior\TupleJoin_Specs.cs" />
     <Compile Include="Routing\Condition_Specs.cs" />
     <Compile Include="Routing\HeaderAdapterRouting_Specs.cs" />
+    <Compile Include="Routing\Inheritance_Specs.cs" />
     <Compile Include="Routing\Memory_Specs.cs" />
+    <Compile Include="Routing\NewContext_Specs.cs" />
     <Compile Include="Routing\NewRouting_Specs.cs" />
     <Compile Include="Routing\Behavior\Branch_Specs.cs" />
     <Compile Include="Routing\Behavior\Inspection_Specs.cs" />
