--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -117,11 +117,15 @@
     <Compile Include="Fibers\Internal\TryCatchOperationExecutor.cs" />
     <Compile Include="Internal\LinkImpl.cs" />
     <Compile Include="Internal\ReSharperStaticAnalysis.cs" />
+    <Compile Include="LoopExtensions.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\AdvancedExtensionsForHeaders.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\BodySelectorFactory.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MatchHeader.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MatchHeaderChannel.cs" />
+    <Compile Include="MessageHeaders\RespondExtensions.cs" />
+    <Compile Include="MessageHeaders\SendExtensions.cs" />
     <Compile Include="MessageHeaders\SetMessageHeader.cs" />
+    <Compile Include="MessageHeaders\UriExtensions.cs" />
     <Compile Include="Messages\Fault.cs" />
     <Compile Include="Messages\Link.cs" />
     <Compile Include="Messages\Resume.cs" />
@@ -258,21 +262,22 @@
     <Compile Include="Routing\Configuration\ResponseConsumerNodeFactory.cs" />
     <Compile Include="Routing\Contexts\AbstractRoutingContext.cs" />
     <Compile Include="Routing\Contexts\DynamicRoutingContextFactory.cs" />
+    <Compile Include="Routing\Contexts\JoinRoutingContext.cs" />
+    <Compile Include="Routing\Contexts\JoinRoutingContextExtensions.cs" />
     <Compile Include="Routing\Contexts\MessageProxy.cs" />
     <Compile Include="Routing\Contexts\MessageRoutingContextFactory.cs" />
     <Compile Include="Routing\Contexts\MessageRoutingContextImpl.cs" />
     <Compile Include="Routing\Contexts\MessageRoutingContextProxy.cs" />
     <Compile Include="Routing\Contexts\MessageRoutingContextProxyFactory.cs" />
+    <Compile Include="Routing\Contexts\RequestMessageProxy.cs" />
     <Compile Include="Routing\Contexts\RequestProxy.cs" />
     <Compile Include="Routing\Contexts\RequestRoutingContextProxyFactory.cs" />
     <Compile Include="Routing\Contexts\ResponseProxy.cs" />
     <Compile Include="Routing\Contexts\ResponseRoutingContextProxyFactory.cs" />
     <Compile Include="Routing\Contexts\ObjectRoutingContextFactory.cs" />
-    <Compile Include="Routing\Contexts\RequestRoutingContext.cs" />
     <Compile Include="Routing\Contexts\RequestRoutingContextFactory.cs" />
     <Compile Include="Routing\Contexts\RequestRoutingContextImpl.cs" />
     <Compile Include="Routing\Contexts\RequestRoutingContextProxy.cs" />
-    <Compile Include="Routing\Contexts\ResponseRoutingContext.cs" />
     <Compile Include="Routing\Contexts\ResponseRoutingContextFactory.cs" />
     <Compile Include="Routing\Contexts\ResponseRoutingContextImpl.cs" />
     <Compile Include="Routing\Contexts\ResponseRoutingContextProxy.cs" />
@@ -330,8 +335,8 @@
     <Compile Include="Channels\Configuration\Internal\DistributedInstanceChannelProviderConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\PropertyChannelsConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\PropertyChannelsConfiguratorImpl.cs" />
-    <Compile Include="ExtensionsToInbox.cs" />
-    <Compile Include="MessageHeaders\ExtensionsToHeaders.cs" />
+    <Compile Include="ReceiveExtensions.cs" />
+    <Compile Include="MessageHeaders\RequestExtensions.cs" />
     <Compile Include="MessageHeaders\Message.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MessageImpl.cs" />
     <Compile Include="MessageHeaders\Request.cs" />
@@ -487,6 +492,7 @@
     <Compile Include="StateMachine\ChannelConfiguration\StateMachineEventInspector.cs" />
     <Compile Include="StateMachine\ChannelConfiguration\StateMachineEventInspectorResult.cs" />
     <Compile Include="StateMachine\StateMachineBinding.cs" />
+    <Compile Include="WithinExtensions.cs" />
     <Compile Include="Workflow\Configuration\AnyStateConfigurator.cs" />
     <Compile Include="Workflow\Configuration\DelegateConfigurator.cs" />
     <Compile Include="Workflow\Configuration\ExceptionBuilder.cs" />
