--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -118,14 +118,11 @@
     <Compile Include="Internal\LinkImpl.cs" />
     <Compile Include="Internal\ReSharperStaticAnalysis.cs" />
     <Compile Include="LoopExtensions.cs" />
-    <Compile Include="MessageHeaders\MessageHeaders\AdvancedExtensionsForHeaders.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\HeaderExtensions.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\BodySelectorFactory.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MatchHeader.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MatchHeaderChannel.cs" />
-    <Compile Include="MessageHeaders\RespondExtensions.cs" />
-    <Compile Include="MessageHeaders\SendExtensions.cs" />
     <Compile Include="MessageHeaders\SetMessageHeader.cs" />
-    <Compile Include="MessageHeaders\UriExtensions.cs" />
     <Compile Include="Messages\Fault.cs" />
     <Compile Include="Messages\Link.cs" />
     <Compile Include="Messages\Resume.cs" />
@@ -253,17 +250,18 @@
     <Compile Include="Remote\Remote\SocketExtensions.cs" />
     <Compile Include="Remote\Remote\SocketWriter.cs" />
     <Compile Include="Remote\Remote\DelegateChunkWriter.cs" />
+    <Compile Include="RequestExtensions.cs" />
+    <Compile Include="RespondExtensions.cs" />
     <Compile Include="Routing\Activation.cs" />
     <Compile Include="Routing\Configuration\ConsumerNodeFactory.cs" />
     <Compile Include="Routing\Configuration\DynamicConsumerNodeFactory.cs" />
+    <Compile Include="Routing\Configuration\DynamicRoutingEngineConfigurator.cs" />
     <Compile Include="Routing\Configuration\MessageConsumerNodeFactory.cs" />
     <Compile Include="Routing\Configuration\ObjectConsumerNodeFactory.cs" />
     <Compile Include="Routing\Configuration\RequestConsumerNodeFactory.cs" />
     <Compile Include="Routing\Configuration\ResponseConsumerNodeFactory.cs" />
     <Compile Include="Routing\Contexts\AbstractRoutingContext.cs" />
     <Compile Include="Routing\Contexts\DynamicRoutingContextFactory.cs" />
-    <Compile Include="Routing\Contexts\JoinRoutingContext.cs" />
-    <Compile Include="Routing\Contexts\JoinRoutingContextExtensions.cs" />
     <Compile Include="Routing\Contexts\MessageProxy.cs" />
     <Compile Include="Routing\Contexts\MessageRoutingContextFactory.cs" />
     <Compile Include="Routing\Contexts\MessageRoutingContextImpl.cs" />
@@ -296,7 +294,6 @@
     <Compile Include="Routing\Nodes\ConstantNode.cs" />
     <Compile Include="Routing\Nodes\ConsumerNode.cs" />
     <Compile Include="Routing\Nodes\ConvertNode.cs" />
-    <Compile Include="Routing\Nodes\JoinNode.2.cs" />
     <Compile Include="Routing\Nodes\JoinNode.cs" />
     <Compile Include="Routing\Nodes\MessageNode.cs" />
     <Compile Include="Routing\Nodes\ProductionNode.cs" />
@@ -313,6 +310,7 @@
     <Compile Include="Routing\Visualizers\StringRoutingEngineVisitor.cs" />
     <Compile Include="Schedulers\Internal\ShutdownSchedulerOnDispose.cs" />
     <Compile Include="Schedulers\SchedulerException.cs" />
+    <Compile Include="SendExtensions.cs" />
     <Compile Include="StactException.cs" />
     <Compile Include="MessageHeaders\Command.cs" />
     <Compile Include="Internal\ThreadSingleton.cs" />
@@ -336,7 +334,6 @@
     <Compile Include="Channels\Configuration\Internal\PropertyChannelsConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\PropertyChannelsConfiguratorImpl.cs" />
     <Compile Include="ReceiveExtensions.cs" />
-    <Compile Include="MessageHeaders\RequestExtensions.cs" />
     <Compile Include="MessageHeaders\Message.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MessageImpl.cs" />
     <Compile Include="MessageHeaders\Request.cs" />
@@ -411,11 +408,7 @@
     <Compile Include="Actors\Inbox.cs" />
     <Compile Include="Channels\ShuntChannel.cs" />
     <Compile Include="Channels\Visitors\TraceChannelVisitor.cs" />
-    <Compile Include="Routing\Configuration\Internal\DynamicRoutingEngineConfigurator.cs" />
-    <Compile Include="Routing\Configuration\ReceiveConfigurator.cs" />
-    <Compile Include="Routing\Configuration\ReceiveConfiguratorImpl.cs" />
     <Compile Include="Routing\Configuration\RoutingEngineConfigurator.cs" />
-    <Compile Include="Routing\Internal\Tuple.cs" />
     <Compile Include="Routing\ExtensionsToRoutingEngine.cs" />
     <Compile Include="Routing\DynamicRoutingEngine.cs" />
     <Compile Include="Routing\RoutingEngine.cs" />
@@ -492,6 +485,7 @@
     <Compile Include="StateMachine\ChannelConfiguration\StateMachineEventInspector.cs" />
     <Compile Include="StateMachine\ChannelConfiguration\StateMachineEventInspectorResult.cs" />
     <Compile Include="StateMachine\StateMachineBinding.cs" />
+    <Compile Include="UriExtensions.cs" />
     <Compile Include="WithinExtensions.cs" />
     <Compile Include="Workflow\Configuration\AnyStateConfigurator.cs" />
     <Compile Include="Workflow\Configuration\DelegateConfigurator.cs" />
