--- a/src/Stact.ForNHibernate.Specs/App.config
+++ b/src/Stact.ForNHibernate.Specs/App.config
@@ -1,8 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
 	<configSections>
-		<section name="hibernate-configuration"
-						 type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+		<section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate"/>
 	</configSections>
 
 	<hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
@@ -11,7 +10,7 @@
 			<property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
 			<property name="connection.connection_string_name">Default</property>
 			<property name="connection.isolation">ReadUncommitted</property>
-			<property name='proxyfactory.factory_class'>NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle</property>
+			<property name="proxyfactory.factory_class">NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle</property>
 			<property name="adonet.batch_size">100</property>
 			<property name="default_schema">dbo</property>
 			<property name="dialect">NHibernate.Dialect.MsSql2005Dialect</property>
@@ -21,8 +20,6 @@
 	</hibernate-configuration>
 
 	<connectionStrings>
-		<add name="Default"
-			 connectionString="Application Name=Stact;Connect Timeout=5;Connection Lifetime=10;Database=test;Server=.;Integrated Security=SSPI"
-			 providerName="System.Data.SqlClient"/>
+		<add name="Default" connectionString="Application Name=Stact;Connect Timeout=5;Connection Lifetime=10;Database=test;Server=.;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
