--- a/src/Stact.ServerFramework.Specs/Stact.ServerFramework.Specs.csproj
+++ b/src/Stact.ServerFramework.Specs/Stact.ServerFramework.Specs.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Stact.ServerFramework.Specs</RootNamespace>
     <AssemblyName>Stact.ServerFramework.Specs</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
