Reworking some things

--- a/src/Stact.Specs/Stact.Specs.csproj
+++ b/src/Stact.Specs/Stact.Specs.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Actions\ActionScheduler_Specs.cs" />
     <Compile Include="Actions\LoopbackAction_Specs.cs" />
     <Compile Include="Actions\OrderedOperation_Specs.cs" />
+    <Compile Include="Actors\Actor_Specs.cs" />
     <Compile Include="Actors\AnonymousActor_Specs.cs" />
     <Compile Include="Actors\Auctions\Ask_Specs.cs" />
     <Compile Include="Actors\Auctions\Auction.cs" />
