--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -109,13 +109,17 @@
     </Compile>
     <Compile Include="Actors\Actor.cs" />
     <Compile Include="Actors\ActorConvention.cs" />
-    <Compile Include="Actors\ActorInstance.cs" />
+    <Compile Include="Actors\ActorRef.cs" />
     <Compile Include="Actors\ActorFactory.cs" />
+    <Compile Include="Actors\Actors\ActorExceptionHandler.cs" />
     <Compile Include="Actors\Actors\Registries\ActorRegistryHeaderChannel.cs" />
+    <Compile Include="Actors\Actors\SelfOnlyActorRestartExceptionHandler.cs" />
+    <Compile Include="Actors\Actors\SupervisorActor.cs" />
     <Compile Include="Actors\ExtensionsForLinking.cs" />
     <Compile Include="ActorUrn.cs" />
     <Compile Include="Channels\UntypedFilterChannel.cs" />
-    <Compile Include="Fibers\Internal\TryCatchOperationExecutor.cs" />
+    <Compile Include="Fibers\Executors\BasicOperationExecutor.cs" />
+    <Compile Include="Fibers\Executors\TryCatchOperationExecutor.cs" />
     <Compile Include="Internal\LinkImpl.cs" />
     <Compile Include="Internal\ReSharperStaticAnalysis.cs" />
     <Compile Include="LoopExtensions.cs" />
@@ -123,12 +127,19 @@
     <Compile Include="MessageHeaders\MessageHeaders\MatchHeader.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MatchHeaderChannel.cs" />
     <Compile Include="MessageHeaders\SetMessageHeader.cs" />
+    <Compile Include="Messages\ActorRestartLimitReached.cs" />
+    <Compile Include="Messages\Death.cs" />
     <Compile Include="Messages\Fault.cs" />
+    <Compile Include="Messages\InboxMessage.cs" />
     <Compile Include="Messages\Link.cs" />
+    <Compile Include="Messages\ReceiveTimeout.cs" />
+    <Compile Include="Messages\Restart.cs" />
     <Compile Include="Messages\Resume.cs" />
     <Compile Include="Messages\Start.cs" />
     <Compile Include="Messages\Stop.cs" />
     <Compile Include="Messages\Suspend.cs" />
+    <Compile Include="Messages\Unlink.cs" />
+    <Compile Include="Messages\UnlinkAndStop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Remote\Configuration\RemoteActorRegistryBuilder.cs" />
     <Compile Include="Actors\Events\ActorRegistered.cs" />
@@ -205,7 +216,6 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Actors\Internal\ActorChannelProvider.cs" />
     <Compile Include="Actors\Internal\ActorFactoryImpl.cs" />
-    <Compile Include="Fibers\Internal\BasicOperationExecutor.cs" />
     <Compile Include="Fibers\Internal\OperationExecutor.cs" />
     <Compile Include="Fibers\Internal\Agenda.cs" />
     <Compile Include="Fibers\Internal\ShutdownFiberOnDispose.cs" />
